--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MONGO_URL='mongodb://127.0.0.1:27017'
 SECRET_KEY='parkash'
 NODE_ENV='producton'
-# url to the frontend app
 FRONTEND_BASE_URL=
+SMTP_USER='93ac6d001@smtp-brevo.com'
+SMTP_PSWD='93ac6d001@smtp-brevo.com'
+SENDER_EMAIL='parkashkumar79738@gmail.com'
