ROLE BASED AUTHENTICATION

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ FRONTEND_BASE_URL=
 SMTP_USER='93ac6d001@smtp-brevo.com'
 SMTP_PSWD='93ac6d001@smtp-brevo.com'
 SENDER_EMAIL='parkashkumar79738@gmail.com'
+CLOUD_NAME=dzlenv0rx
+API_KEY=xe3ku4-DekLJpmynwc6uISK7ZbI
+API_SECRET=575618797958272
