--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-MONGO_URL='mongodb://127.0.0.1:27017'
+MONGO_URL='mongodb+srv://parkashkumar79738_db_user:Gcu9lMsnQf8D1rqD@clusterone.mfeehh6.mongodb.net/'
 SECRET_KEY='parkash'
-NODE_ENV='producton'
+NODE_ENV='production' # 
 FRONTEND_BASE_URL=
 SMTP_USER='93ac6d001@smtp-brevo.com'
 SMTP_PSWD='93ac6d001@smtp-brevo.com'
